--- a/Android_Client/OpenSyncedLists/app/src/main/AndroidManifest.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/AndroidManifest.xml
@@ -2,7 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="eu.schmidt.systems.opensyncedlists">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,7 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ListActivity">
+        <activity android:name=".ListActivity"
+            android:windowSoftInputMode="stateAlwaysHidden|stateHidden">
         </activity>
     </application>
 
