--- a/Android_Client/OpenSyncedLists/app/src/main/AndroidManifest.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.OpenSyncedLists"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".SettingsActivity"
+            android:exported="true"
+            android:parentActivityName=".ListsActivity"
+            android:label="@string/title_activity_settings" />
+        <activity
             android:name=".AboutActivity"
+            android:parentActivityName=".ListsActivity"
             android:exported="true" />
         <activity
             android:name=".ListsActivity"
@@ -26,7 +32,7 @@
         </activity>
         <activity
             android:name=".ListActivity"
-            android:windowSoftInputMode="stateAlwaysHidden|stateHidden"></activity>
+            android:windowSoftInputMode="stateAlwaysHidden|stateHidden" />
     </application>
 
 </manifest>
