Add list settings * add delete list * add checkOption * much more options * only parse id instead of full header (in bundles) * some fixes

--- a/Android_Client/OpenSyncedLists/app/src/main/AndroidManifest.xml
+++ b/Android_Client/OpenSyncedLists/app/src/main/AndroidManifest.xml
@@ -13,14 +13,18 @@
         android:theme="@style/Theme.OpenSyncedLists"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".ListSettingsActivity"
+            android:exported="true"
+            android:label="@string/list_settings_title" />
+        <activity
             android:name=".SettingsActivity"
             android:exported="true"
-            android:parentActivityName=".ListsActivity"
-            android:label="@string/title_activity_settings" />
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".ListsActivity" />
         <activity
             android:name=".AboutActivity"
-            android:parentActivityName=".ListsActivity"
-            android:exported="true" />
+            android:exported="true"
+            android:parentActivityName=".ListsActivity" />
         <activity
             android:name=".ListsActivity"
             android:exported="true">
