--- a/Android_Client/OpenSyncedLists/app/build.gradle
+++ b/Android_Client/OpenSyncedLists/app/build.gradle
@@ -3,15 +3,15 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 33
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "eu.schmidt.systems.opensyncedlists"
         minSdkVersion 19
-        targetSdkVersion 30
-        versionCode 8
-        versionName "1.0.7"
+        targetSdkVersion 33
+        versionCode 9
+        versionName "1.0.8"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -26,6 +26,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+    namespace 'eu.schmidt.systems.opensyncedlists'
 
 }
 
