--- a/Android_Client/OpenSyncedLists/app/build.gradle
+++ b/Android_Client/OpenSyncedLists/app/build.gradle
@@ -3,13 +3,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 33
+    compileSdk 34
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "eu.schmidt.systems.opensyncedlists"
         minSdkVersion 19
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 9
         versionName "1.0.8"
 
