--- a/Android_Client/OpenSyncedLists/app/build.gradle
+++ b/Android_Client/OpenSyncedLists/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "eu.schmidt.systems.opensyncedlists"
-        minSdkVersion 21
+        minSdkVersion 24
         targetSdkVersion 34
         versionCode 9
         versionName "1.0.8"
@@ -23,8 +23,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     namespace 'eu.schmidt.systems.opensyncedlists'
 
@@ -40,4 +40,6 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+
+    testImplementation 'org.robolectric:robolectric:4.7.3'
 }
